# i-cant-opengl

./: .gitmodules  LICENSE  meson.build  readme.txt
data/: far.csv  spin.csv
include/: NBody.h  NBody.hpp  Octree.h  camera.hpp  geometry.hpp  graphics.hpp  octree.hpp  shaders.hpp  util.hpp  window.hpp
src/: NBody.cpp  camera.cpp  geometry.cpp  graphics.cpp  main.cpp  octree.cpp  shaders.cpp  window.cpp
subprojects/glad/: meson.build
subprojects/glad/include/glad/: glad.h
subprojects/glad/src/: glad.c
